# ClestiqShield-AgentCore

./: .env.example  .gitignore  Dockerfile  Dockerfile.test  README.md  docker-compose.test.yml  docker-compose.yml  otel-collector-config.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/agents/: graph.py  state.py
app/agents/nodes/: security.py
app/api/: deps.py
app/api/v1/endpoints/: proxy.py
app/core/: config.py  telemetry.py
app/schemas/: application.py
scripts/: run-tests.ps1  test_rate_limits.ps1
services/eagle-eye/: Dockerfile  pyproject.toml
services/eagle-eye/app/: main.py
services/eagle-eye/app/api/: deps.py
services/eagle-eye/app/api/v1/endpoints/: api_keys.py  apps.py  auth.py  feedback.py  users.py
services/eagle-eye/app/core/: config.py  db.py  security.py  telemetry.py
services/eagle-eye/app/models/: __init__.py  api_key.py  app.py  feedback.py  user.py
services/eagle-eye/app/schemas/: __init__.py
services/gateway/: Dockerfile  pyproject.toml
services/gateway/app/: main.py
services/gateway/app/api/: deps.py
services/gateway/app/api/v1/endpoints/: apps_disabled.py  chat.py  proxy.py  router_eagleeye.py
services/gateway/app/core/: config.py  db.py  rate_limiter.py  telemetry.py
services/gateway/app/models/: api_key.py  application.py
services/gateway/app/schemas/: gateway.py
services/guardian/: Dockerfile  pyproject.toml
services/guardian/app/: __init__.py  main.py
services/guardian/app/agents/: __init__.py  graph.py  state.py
services/guardian/app/agents/nodes/: __init__.py  citation_verifier.py  content_filter.py  disclaimer_injector.py  hallucination_detector.py  parallel_llm_validator.py  pii_scanner.py  refusal_detector.py  tone_checker.py  toon_decoder.py
services/guardian/app/core/: __init__.py  config.py  metrics.py  telemetry.py
services/guardian/app/schemas/: __init__.py  validation.py
services/otel-collector/: config.yaml
services/security-agent/: Dockerfile  pyproject.toml
services/security-agent/app/: main.py
services/security-agent/app/agents/: graph.py  state.py
services/security-agent/app/agents/nodes/: llm_responder.py  parallel_llm.py  sanitizers.py  security.py  threat_detectors.py  toon_converter.py
services/security-agent/app/core/: config.py  metrics.py  telemetry.py
services/security-agent/app/schemas/: security.py
shared/: schemas.py
tests/: Dockerfile  conftest.py  docker-compose.yml  run-tests.ps1
tests/gateway/: conftest.py
tests/gateway/e2e/: test_flow.py
tests/gateway/integration/api/: test_proxy.py
tests/gateway/unit/: test_models.py
tests/integration/api/: test_apps.py  test_proxy.py
tests/security_agent/agents/: test_sanitizers.py  test_security_integration.py  test_threat_detectors.py
