[tool.poetry]
name = "clestiq-shield-guardian"
version = "1.0.0"
description = "Clestiq Shield Guardian - Output Validation Agent"
authors = ["Admin <vasubhut157@gmail.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic-settings = "^2.1.0"
pydantic = "^2.0.0"
structlog = "^24.1.0"
langchain-core = "^1.2.2"
langchain-google-genai = "^4.1.2"
langgraph = "^1.0.0"
bleach = "^6.1.0"
httpx = "^0.28.0"
ddtrace = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
